.provarCaches/00D410000011HE0EAM/objects/rstkf__apeftstub__c.object
<CustomObject>
    <description>apeftstub__c</description>
    <fields>
        <fullName>rstkf__apeftstub_amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_amtwht__c</fullName>
        <description>WHT Amount</description>
        <inlineHelpText>WHT Amount</inlineHelpText>
        <label>WHT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_apeft__c</fullName>
        <label>Accounts Payable EFT</label>
        <referenceTo>rstkf__apeft__c</referenceTo>
        <relationshipLabel>AP EFT Payment Details</relationshipLabel>
        <relationshipName>apeftstubs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payable Transaction</description>
        <inlineHelpText>This field provides a link back to the AP Transaction associated with the payment detail</inlineHelpText>
        <label>Payable Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>AP EFT Payment Details</relationshipLabel>
        <relationshipName>apeftstubs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_disctaken__c</fullName>
        <label>Discount Taken</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_docamt__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_docdate__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_docno__c</fullName>
        <label>Document Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_openamt__c</fullName>
        <label>Open Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_paysessvend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment Session Vendor</description>
        <inlineHelpText>The Payment Session Vendor associated with this payment detail</inlineHelpText>
        <label>Payment Session Vendor</label>
        <referenceTo>rstkf__paysessvend__c</referenceTo>
        <relationshipLabel>AP EFT Payment Details</relationshipLabel>
        <relationshipName>paysessvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_prevpaid__c</fullName>
        <label>Previously Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_remitdesc__c</fullName>
        <description>Remittance Advice Description</description>
        <inlineHelpText>This field provides payment information for this transaction that can enable the Vendor’s Accounting team to match the payment to Invoices.</inlineHelpText>
        <label>Remittance Advice Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apeftstub_txntotal__c</fullName>
        <label>Invoice/Memo Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apeftstub_apeft__r.rstkf__apeft_paynumber__c + &apos;(&apos; + rstkf__apeftstub_docno__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AP EFT Payment Detail</label>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apeftstub_apeft__c</columns>
        <columns>rstkf__apeftstub_amount__c</columns>
        <columns>rstkf__apeftstub_disctaken__c</columns>
        <columns>rstkf__apeftstub_docdate__c</columns>
        <columns>rstkf__apeftstub_docno__c</columns>
        <columns>rstkf__apeftstub_docamt__c</columns>
        <columns>rstkf__apeftstub_amtwht__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AP EFT Payment Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP EFT Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>